web/themes/custom/usagov/sass/_homepage.scss
/* ... */
.how-button-list {
  align-items: center;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(4, 1fr);
  margin-left: auto;
  margin-right: auto;
  margin-top: 30px;
  max-width: var($homepage, smaller-max-width);
}

.how-button {
  align-items: center;
  border-left: 4px solid var($cyan-30v);
  display: flex;
  height: 60px;
  padding-left: 12px;
  padding-right: 20px;
  margin-bottom: 15px;
}

/* Life Events */
.life-events {
  background-color: var($deep-blue);
  grid-column: 1 / 3;
  grid-row: 5 / 6;
  margin-left: 5vw;
  margin-right: 5vw;
  padding: 0;
  max-width: 100%;

  h2 {
    font-family: "Merriweather Web", Georgia, Cambria, "Times New Roman", Times,
      serif;
    font-size: var($homepage, medium-font-size);
    margin: 0;
    padding-top: 50px;
  }

  p {
    font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto,
      Arial, sans-serif;
    font-size: var($homepage, small-font-size);
    padding-top: 13px;
  }
}

.life-events-carousel {
  margin: 40px 0 0;
  max-width: 100%;
}

.sr-only {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.carousel {
  position: relative;
  width: 100%;
  height: 300px;
  margin: 0;
  padding: 0;
  display: flex;
 justify-content: space-between;


  .grid-container {
    width: 100%;
  }

  .usagov-cards {
    background-color: transparent;
    padding: 0;
  }

  .usa-card__container {
    background-color: transparent;
    box-shadow: none;
  }

  .usagov-card {
    border: none;
  }
}

.previous,
.next {
  padding: 0;
  width: 44px;
  height: 44px;
  margin-top: auto;
  margin-bottom: auto;
  border: none;
  background-color: transparent;

  img {
    width: 44px;

    &:hover {
      filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg)
        brightness(103%) contrast(103%);
    }
  }
}

.carousel__navigation {
  margin: 30px 0 70px;
  list-style-type: none;
  padding-left: 0;
  align-items: center;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  width: auto;
}

.carousel__navigation_button {
  width: 44px;
  height: 44px;
  background-color: transparent;
  border: none;
  padding-left: 0;
  padding-right: 0;
  margin-right: 0;
}

.carousel__navigation_dot {
  fill: transparent;
  stroke: var($cyan-30v);
  stroke-width: 6px;

  &:hover {
    stroke: var(white);
    stroke-width: 6px;
  }
}

.carousel__navigation_button[aria-current="true"] .carousel__navigation_dot {
  fill: var($cyan-30v);
  stroke: var($cyan-30v);
  stroke-width: 6px;
}

.carousel-mover {
  width: calc(100% - 110px);
  padding-left: 11px;
  padding-right: 11px;
}

.slides {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  width: 100%;
  overflow: hidden;
}

.slide {
  height: 285px;
  width: 234px;
  max-width: 234px;
  flex: 0 0 calc(100%);
  margin-top: 10px;
  border: 1px solid #53BBDF;
  border-radius: 4px;
  box-shadow: 0 3px 6px rgba(122,122,122,.15);
  padding: 0;

  &:focus-within {
    border: 4px solid #c05600;
  }

  a {
    color: var($white);
    text-decoration: none;
    display: flex;

    &:visited {
      color: var($white);
      text-decoration: none;
    }

    &:focus {
      outline: none;
    }

    .life_events_card_text {
      padding: 12px 12px 0 12px;
      height:210px;
    }
  }

  .usa-card__container{
    margin:0;
  }

  .slide:last-child {
    margin-right: 0;
  }

  h3 {
    margin: 0;
    color: var($cyan-30v);
    text-decoration: none;
    font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto,
      Arial, sans-serif;
    line-height: 1.25;
  }

  p {
    margin: 0;
    font-weight: normal;
    font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
    font-size: var($homepage, small-font-size);
    line-height: 1.25;
    padding-top: 10px;
  }

  .usa-card__body:last-child {
    padding-bottom: 0;
  }
}

.slide a:hover > h3 {
  text-decoration: underline;
  text-decoration-color: initial;
  text-decoration-thickness: initial;
}

.slide a:hover .thumbnailBanner {
  opacity: 0.5;
}

.thumbnailDiv {
  background: #ccecf2;
  width: 100%;
  height: 75px;
  margin: 0;
  box-shadow: 0 6px 6px var($blue-shadow);
  border-radius: 0 0 4px 4px;
  overflow: hidden;
}

.thumbnailBanner {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
  margin: 0;
  border-radius: 0 0 4px 4px;
}

/* Jump */
.jump {
  padding: 0;
  text-align: center;

  a {
    color: var($white);
    font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto,
      Arial, sans-serif;
    font-size: var($homepage, small-font-size);
    text-decoration: underline;
    display: inline-block;
    margin-bottom: 10px;
  }

  p {
    margin: 0 0 5px;
  }
}

.jump1 {
  grid-column: 1 / 3;
  grid-row: 4 / 5;
  padding-top: 20px;
  background-color: var($deep-blue);
}

.jump2 {
  grid-column: 1 / 3;
  grid-row: 6 / 8;
  z-index: 2;

  a span {
    background-color: var($deep-blue);
  }
}

/* All Topics Header */
.all-topics-header {
  background-color: var($white);
  grid-column: 1 / 3;
  grid-row: 7 / 9;

  h2 {
    border-bottom: 10px solid var($red);
    color: var($red);
    font-family: "Merriweather Web", Georgia, Cambria, "Times New Roman", Times,
      serif;
    font-size: 39.04px;
    font-weight: bold;
    margin: 65px 5vw 0;
    max-width: 90%;
    padding: 0;
    text-align: left;
  }
}

.all-topics {
  background-color: var($light-blue);
  grid-column: 1 / 3;
  grid-row: 9 / 10;

  p {
    color: var($off-black);
  }
}

/* All Topics Cards */
.all-topics-background {
  background-color: var($light-blue);
  padding-bottom: 100px;
  padding-top: 10px;
}

.smaller-width-div {
  margin-left: auto;
  margin-right: auto;
  max-width: var($homepage, smaller-max-width);
}
/* ... */

